--- a/apps/ux-films-finder/src/app/components/search/search.component.less
+++ b/apps/ux-films-finder/src/app/components/search/search.component.less
@@ -31,8 +31,17 @@
   &__container {
     padding: 0;
   }
-
+  &__results-loader {
+    max-width: 439px;
+    z-index: 1;
+    position: relative;
+    background: @color-gray-49;
+    border-radius: 16px;
+    box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+    margin-top: -55px;
+  }
   &__results-container {
+    margin-top: 80px;
     max-width: 439px;
     z-index: 1;
     position: relative;
