--- a/apps/ux-films-finder/src/app/components/advanced-search/advanced-search.component.html
+++ b/apps/ux-films-finder/src/app/components/advanced-search/advanced-search.component.html
@@ -54,7 +54,7 @@
         </div>
 
         <button mat-raised-button type="submit"
-                (click)="showFilmsLog()" >ПОИСК
+                (click)="showFilms()" >ПОИСК
         </button>
       </div>
     </div>
