--- a/apps/ux-films-finder/src/app/components/search/search.component.less
+++ b/apps/ux-films-finder/src/app/components/search/search.component.less
@@ -40,6 +40,14 @@
     box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
     margin-top: -55px;
   }
+  .search__results-loader .loader__spinner {
+    transform: scale(0.7);
+  }
+  .search__results-loader .loader__title {
+    display: flex;
+    justify-content: center;
+    font-size: 16px;
+  }
   &__results-container {
     margin-top: 80px;
     max-width: 439px;
