new loader.component

--- a/apps/ux-films-finder/src/app/components/loader/loader.component.html
+++ b/apps/ux-films-finder/src/app/components/loader/loader.component.html
@@ -1,6 +1,6 @@
 <div class="loader">
   <div class="loader__lable">
     <mat-spinner class="loader__spinner" [color]="'accent'"></mat-spinner>
-    <div class="loader__title">Загрузка...</div>
+    <div class="loader__title">Загрузка</div>
   </div>
 </div>
