--- a/apps/ux-films-finder/src/app/components/loader/loader.component.less
+++ b/apps/ux-films-finder/src/app/components/loader/loader.component.less
@@ -11,9 +11,10 @@
     stroke: @color-green-69;
   }
   &__title {
-    color: @color-green-69;
+    color: @color-gray-30;
     font-size: 18px;
     line-height: 20px;
     padding-top: 32px;
+    text-align: center;
   }
 }
