--- a/apps/ux-films-finder/src/app/components/category/category.component.html
+++ b/apps/ux-films-finder/src/app/components/category/category.component.html
@@ -1,5 +1,5 @@
 <ff-title-films-list [genre]="genre"></ff-title-films-list>
-<div class="category">
+<div class="category center-content">
   <ff-loader *ngIf="loading"></ff-loader>
 
   <div class="category__card-list">
