--- a/apps/ux-films-finder/src/app/components/footer/footer.component.less
+++ b/apps/ux-films-finder/src/app/components/footer/footer.component.less
@@ -4,33 +4,43 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  background-color: @color-gray-66;
+  background-color: @color-gray-1b;
   padding: 20px;
+  margin-top: 30px;
 
   &__navigation {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   &__navigation-block {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
+    padding: 0px 20px;
   }
 
   &__link {
     text-decoration: none;
-    color: white;
+    color: @color-white-ff;
     margin: 2px;
+  }
+
+  &__link:hover {
+    color: @color-green-69;
+  }
+
+  &__link:focus {
+    color: @color-green-69;
   }
 
   &__credits {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    color: white;
-    margin-top: 15px;
+    justify-content: space-between;
+    color: @color-white-ff;
+    margin-top: 30px;
     text-align: center;
   }
 
@@ -41,27 +51,27 @@
   }
 
   &__svg-icon {
-    fill: white;
+    fill: @color-white-ff;
     width: 32px;
     height: 32px;
     margin: 5px;
   }
 
   &__svg-icon:hover {
-    fill: black;
+    fill: @color-green-69;
     cursor: pointer;
   }
 
   &__svg-icon-in-path {
-    fill: white;
+    fill: @color-white-ff;
   }
 
   &__svg-icon-in-path:hover {
-    fill: black;
+    fill: @color-green-69;
   }
 }
 
-@media (max-width: @mobile-max-width) {
+@media screen and (max-width: @mobile-max-width) {
   .footer {
     &__navigation-block {
       flex: 0 0 45%;
