--- a/apps/ux-films-finder/src/app/components/person/person.component.less
+++ b/apps/ux-films-finder/src/app/components/person/person.component.less
@@ -79,7 +79,7 @@
   &__gender-and-name {
     display: flex;
     flex-direction: row-reverse;
-    justify-content: start;
+    justify-content: flex-end;
     margin-top: 88px;
   }
   &__name-en {
@@ -103,7 +103,7 @@
     display: flex;
     justify-content: space-between;
     background: @color-gray-0E;
-    right: -1px;
+    right: 0px;
     top: 158px;
     width: 100%;
     height: 160px;
