--- a/apps/ux-films-finder/src/app/components/search/search.component.less
+++ b/apps/ux-films-finder/src/app/components/search/search.component.less
@@ -37,7 +37,7 @@
     position: relative;
     background: @color-gray-49;
     border-radius: 16px;
-    box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+    box-shadow: 1px 0.4em 5px rgba(10, 10, 10, 0.5);
     margin-top: -55px;
   }
   .search__results-loader .loader__spinner {
@@ -47,6 +47,9 @@
     display: flex;
     justify-content: center;
     font-size: 16px;
+    padding-top: 1px;
+    margin-top: 12px;
+    margin-bottom: 10px;
   }
   &__results-container {
     margin-top: 80px;
@@ -55,7 +58,7 @@
     position: relative;
     background: @color-gray-49;
     border-radius: 16px;
-    box-shadow: 0.4em 0.4em 5px rgba(122, 122, 122, 0.5);
+    box-shadow: 1px 0.4em 5px rgba(10, 10, 10, 0.5);
   }
   &__results-list.mat-list-base {
     padding-top: 0;
@@ -78,7 +81,7 @@
   &__poster {
     height: 80px;
     width: 53px;
-    box-shadow: 0 0 5px black;
+    box-shadow: 1px 0.4em 5px rgba(10, 10, 10, 0.5);
     border-radius: 5px;
   }
 
@@ -157,7 +160,7 @@
     }
     &__results-container {
       background: @color-gray-1b;
-      box-shadow: 0.4em 0.4em 5px rgba(10, 10, 10, 0.5);
+      box-shadow: 1px 0.4em 5px rgba(10, 10, 10, 0.5);
     }
   }
 }
