--- a/apps/ux-films-finder/src/app/components/advanced-search/advanced-search.component.less
+++ b/apps/ux-films-finder/src/app/components/advanced-search/advanced-search.component.less
@@ -1,5 +1,5 @@
 @import '../../../assets/styles/themes/base/common/shared';
-.search {
+.searchForm {
   display: flex;
   align-items: center;
   justify-content: center;
